--- a/wc/index.files/sheet001.htm
+++ b/wc/index.files/sheet001.htm
@@ -69,7 +69,7 @@ rt
   <td colspan=2 height=31 class=xl103 width=267 style='border-right:.5pt solid black;
   height:31.0pt;width:267pt'>最后更新</td>
   <td colspan=3 class=xl100 width=223 style='border-right:.5pt solid black;
-  border-left:none;width:223pt'>20140621_2202</td>
+  border-left:none;width:223pt'>20140622_0853</td>
   <td class=xl67 width=92 style='border-left:none;width:92pt'>　</td>
   <td class=xl67 width=66 style='border-left:none;width:66pt'>　</td>
   <td class=xl67 width=52 style='border-left:none;width:52pt'>　</td>
@@ -4307,116 +4307,146 @@ rt
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
   <td class=xl71 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl105 style='height:19.0pt'>阿根廷@1.14</td>
-  <td class=xl76 style='border-top:none;font-size:16.0pt;color:#9C0006;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
-  mso-pattern:black none'>-600</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-500</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-100</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ <tr class=xl78 height=19 style='height:19.0pt'>
+  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>阿根廷@1.14</td>
+  <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-600</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl85 style='border-top:none;border-left:none'>-500</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl85 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl105 style='height:19.0pt'>德国@1.33</td>
-  <td class=xl76 style='border-top:none;font-size:16.0pt;color:#9C0006;
-  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
-  none;font-family:宋体;border:.5pt solid windowtext;background:#FFC7CE;
-  mso-pattern:black none'>-1100</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-500</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-500</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-100</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ <tr class=xl76 height=19 style='height:19.0pt'>
+  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>德国@1.33</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-1100</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl84 style='border-top:none;border-left:none'>-500</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl84 style='border-top:none;border-left:none'>-500</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl84 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt'>波黑 @ 1.90</td>
+ <tr class=xl76 height=19 style='height:19.0pt'>
+  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>波黑 @ 1.90</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
   background:#FFC7CE;mso-pattern:black none'>-300</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-300</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl84 style='border-top:none;border-left:none'>-300</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>梅西 @ 1.50</td>
-  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+ <tr class=xl78 height=19 style='height:19.0pt'>
+  <td height=19 class=xl77 style='height:19.0pt;border-top:none'>梅西 @ 1.50</td>
+  <td class=xl78 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
   background:#FFC7CE;mso-pattern:black none'>-300</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-300</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl85 style='border-top:none;border-left:none'>-300</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
+  <td class=xl78 style='border-top:none;border-left:none'>　</td>
  </tr>
- <tr height=19 style='height:19.0pt'>
-  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>波黑-0.5 @ 1.925</td>
+ <tr class=xl76 height=19 style='height:19.0pt'>
+  <td height=19 class=xl74 style='height:19.0pt;border-top:none'>波黑-0.5 @ 1.925</td>
   <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
   color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
   text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
   background:#FFC7CE;mso-pattern:black none'>-100</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl84 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+  <td class=xl76 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>奖金</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFEB9C;mso-pattern:black none'>1134</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl86 style='border-top:none;border-left:none'>450</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl86 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>570</td>
+  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+  <td class=xl67 style='border-top:none;border-left:none'>114</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
@@ -4426,11 +4456,56 @@ rt
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
   <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
-  <td class=xl67 style='border-top:none;border-left:none'>　</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>今日战绩</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C0006;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFC7CE;mso-pattern:black none'>-1266</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-650</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-100</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-430</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-86</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+ </tr>
+ <tr height=19 style='height:19.0pt'>
+  <td height=19 class=xl66 style='height:19.0pt;border-top:none'>小结</td>
+  <td class=xl76 style='border-top:none;border-left:none;font-size:16.0pt;
+  color:#9C6500;font-weight:400;text-decoration:none;text-underline-style:none;
+  text-line-through:none;font-family:宋体;border:.5pt solid windowtext;
+  background:#FFEB9C;mso-pattern:black none'>2411.19</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-367.5</td>
+  <td class=xl67 style='border-top:none;border-left:none'>555.58</td>
+  <td class=xl67 style='border-top:none;border-left:none'>358.5</td>
+  <td class=xl67 style='border-top:none;border-left:none'>457.5</td>
+  <td class=xl67 style='border-top:none;border-left:none'>290</td>
+  <td class=xl67 style='border-top:none;border-left:none'>876.53</td>
+  <td class=xl67 style='border-top:none;border-left:none'>185</td>
+  <td class=xl67 style='border-top:none;border-left:none'>138.34</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>-372.5</td>
+  <td class=xl67 style='border-top:none;border-left:none'>77.5</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>203.34</td>
+  <td class=xl67 style='border-top:none;border-left:none'>8.9</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
+  <td class=xl67 style='border-top:none;border-left:none'>0</td>
  </tr>
 </table>
 
